--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <script async src="createBudgetPage.js"></script>
     <script async src="createPortfolioPage.js"></script>
     <script async src="addCategoryToBudgetPage.js"></script>
+    <script async src="createBudgetSummary.js"></script>
   </body>
 </html>
