Added chart.js cdn

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <script async src="createPortfolioPage.js"></script>
     <script async src="addCategoryToBudgetPage.js"></script>
     <script async src="createBudgetSummary.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
   </body>
 </html>
