Added script for portfolio page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="This is a redesign of the PFM">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link href="/Users/kchao/Desktop/fontawesome-pro-5.7.2-web/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <title>SYM</title>
@@ -13,7 +14,7 @@
     <div id="body">
       <header>
         <div id="navbar-left-container">
-          <span class="navbar-links" onclick="location.reload()">SYM</span>
+          <span class="navbar-links" onclick="location.reload()"><i class="fal fa-leaf fa-flip-horizontal"></i>SYM</i></span>
         </div>
         <div id="navbar-right-container">
           <span id="navbar-budget" class="navbar-links" onclick="createBudgetPage()">Budgeting</span>
@@ -36,11 +37,12 @@
         </div>
       </div>
     </div>
-    <script async src="removeNodes.js"></script>
-    <script async src="createBudgetPage.js"></script>
-    <script async src="createPortfolioPage.js"></script>
-    <script async src="addCategoryToBudgetPage.js"></script>
-    <script async src="createBudgetSummary.js"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+  <script async src="removeNodes.js"></script>
+  <script async src="createBudgetPage.js"></script>
+  <script async src="createPortfolioPage.js"></script>
+  <script async src="addCategoryToBudgetPage.js"></script>
+  <script async src="createBudgetSummary.js"></script>
+  <script async src="createPortfolioSummary.js"></script>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
   </body>
 </html>
