--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="/Users/kchao/Desktop/fontawesome-pro-5.7.2-web/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="favicon-leaf.png"/>
     <title>SYM</title>
   </head>
   <body>
